--- a/css/waffle.css
+++ b/css/waffle.css
@@ -22,7 +22,7 @@ body {
 }
 .unit {
   display: inline-block;
-  border: 20px solid transparent;
+  border: 14px solid transparent;
   vertical-align: top;
   font-size: 16px;
 }
